@@ -22,3 +22,4 @@ selection=     [ v0 ]
 <TR><TD>2</TD><TD>1000.0</TD><TD>2000.0</TD></TR>
 </TABLE>
 ok
+ok
